@@ -1,6 +1,6 @@
 Package: lattice
-Version: 0.14-15
-Date: 2006/11/28
+Version: 0.14-16
+Date: 2006/12/01
 Priority: recommended
 Title: Lattice Graphics
 Author: Deepayan Sarkar <deepayan.sarkar@r-project.org>
@@ -14,4 +14,4 @@ Enhances: chron
 LazyLoad: yes
 LazyData: yes
 License: GPL version 2 or later
-Packaged: Tue Nov 28 12:24:15 2006; dsarkar
+Packaged: Fri Dec  1 12:54:33 2006; dsarkar
